src/objects/LivingExpenses__c.object
<CustomObject>
    <description>to store all the living expense table config</description>
    <fields>
        <fullName>Lender_Id__c</fullName>
        <formula>lender__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lender Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Id__c</fullName>
        <formula>state__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dependants__c</fullName>
        <label>Dependants</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lender__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lender</label>
        <referenceTo>acfBank_Detail__c</referenceTo>
        <relationshipLabel>Living Expenses</relationshipLabel>
        <relationshipName>livingExpenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>livingExpense__c</fullName>
        <label>Living Expense</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>maritalStatus__c</fullName>
        <label>Marital Status</label>
        <picklist>
            <picklistValues>
                <fullName>Single</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Joint</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>netIncomeFrom__c</fullName>
        <label>Net Income From</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>netIncomeTo__c</fullName>
        <label>Net Income To</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>postcodeCategory__c</fullName>
        <label>Postcode Category</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>state__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>State</label>
        <referenceTo>State__c</referenceTo>
        <relationshipLabel>Living Expenses</relationshipLabel>
        <relationshipName>livingExpenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Living Expense</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>livingExpense__c</columns>
        <columns>dependants__c</columns>
        <columns>lender__c</columns>
        <columns>maritalStatus__c</columns>
        <columns>netIncomeFrom__c</columns>
        <columns>netIncomeTo__c</columns>
        <columns>postcodeCategory__c</columns>
        <columns>state__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Living Expenses Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Living Expenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>